# XNATSlicer

XNATSlicer/: CMakeLists.txt
